--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     //Firebase API used here :)
     const firebaseConfig = {
-      apiKey: "AIzaSyBsteyLxm9SoFClujW9MJkpJnwLIYjKBnk",
+      apiKey: "your api key",
       authDomain: "copper-202bb.firebaseapp.com",
       projectId: "copper-202bb",
       storageBucket: "copper-202bb.firebasestorage.app",
