--- a/index.html
+++ b/index.html
@@ -72,19 +72,7 @@
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
 
 
-    //Firebase API used here :)
-    const firebaseConfig = {
-      apiKey: "your api key",
-      authDomain: "copper-202bb.firebaseapp.com",
-      projectId: "copper-202bb",
-      storageBucket: "copper-202bb.firebasestorage.app",
-      messagingSenderId: "822302242587",
-      appId: "1:822302242587:web:e13a9ae9c5c4a67aee85be",
-      measurementId: "G-2N7VBD84RK"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+    //firebase api script
 
    
   </script>
