--- a/check-out.html
+++ b/check-out.html
@@ -12,7 +12,7 @@
 
     <!-- Web3Forms API used here :) -->
     <form id="orderForm" method="POST" action="https://api.web3forms.com/submit">
-      <input type="hidden" name="access_key" value="481708d1-d17b-455a-a567-34ddf76a5fed" />
+      <input type="hidden" name="access_key" value= "your api key" />
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Email Address" required />
       <input type="tel" name="phone" placeholder="Phone Number" required />
