--- a/register.html
+++ b/register.html
@@ -23,15 +23,7 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
     import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBsteyLxm9SoFClujW9MJkpJnwLIYjKBnk",
-      authDomain: "copper-202bb.firebaseapp.com",
-      projectId: "copper-202bb",
-      storageBucket: "copper-202bb.firebasestorage.app",
-      messagingSenderId: "822302242587",
-      appId: "1:822302242587:web:e13a9ae9c5c4a67aee85be",
-      measurementId: "G-2N7VBD84RK"
-    };
+    //add api code
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
